Fixes menu spacing

--- a/app/assets/stylesheets/components/_menu.scss
+++ b/app/assets/stylesheets/components/_menu.scss
@@ -5,9 +5,11 @@
 
 .Menu-item {
   display: inline-block;
+  font-size: 1.3rem;
+  font-weight: bold;
 
   &:not(:last-child) {
-    margin-right: 10px;
+    margin-right: 20px;
   }
 }
 
